Important changes from 1.6.2 => 1.6.3
============================================================
Limesurvey fieldtype list with comment no longer appends underscore to the fieldname, this might break existing calculation scripts

Important changes from 1.6.1 => 1.6.2
============================================================
Agenda and calendar screens added to version
Mail templates for staff members, respondents, users, etc... possible
Multi language mail templates with wysiwyg editing
Barcharts functionality added
Improved import scalability
Role management has a better display interface
Batch commands now also run from the command line
Core gems css settings moved to shared gems-core.css

Important changes from 1.6 => 1.6.1
============================================================
Added support for ODK Collect by adding OpenRosa support
Added support for data-mining by enabling the storage of all response data in a separate table with one answer per row
Export data now operates in batch mode, allowing bigger exports and combining spss files in one download
Import is possible for most data screens, though respondent import is the only one tested thoroughly.
New snippet for continuous survey ask-ing with thank you message at the end.
Stand alone surveys can now be appended to existing tracks
Project can customize whether the tokens of shared patient are also shared among organizations (default is no)
GemsTracker now runs from the command line as well

Important changes from 1.5.7 => 1.6
============================================================
Patients can now be shared between organizations on the basis of their social security number
No longer Dutch: the default new project is still Dutch, but the basic GemsTracker core is international
New summary and compliance reports
Mail log now shows more information and is better searchable
Tracks can be cloned
Better menu structure